# lubobot

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  imu.rviz  package.xml  robot_bringup.launch
CAD/: bottom_plate_290mm.FCStd  pole_100mm.FCStd  pole_100mm.FCStd1  pole_80mm.FCStd  top_plate_290mm.FCStd  top_plate_290mm.FCStd1
config/: imu_config.yaml
config/ekf/: ekf_imu.yaml  ekf_localization.yaml
docker/: Dockerfile  build_docker.sh  run_docker.sh
extras/: result.txt
firmware/mpu6050/: .cproject  .mxproject  .project  mpu6050.elf.launch  mpu6050.ioc
firmware/mpu6050/MPU6050/: I2Cdev.h  MPU6050.c  MPU6050.h
firmware/mpu6050/Src/: main.c  stm32f7xx_hal_msp.c
firmware/proyecto_unificado/: .cproject  .mxproject  .project  STM32F746ZGTX_FLASH.ld  proyecto_unificado Debug.launch  proyecto_unificado.elf.launch  proyecto_unificado.ioc
firmware/proyecto_unificado/Inc/: main.h  maincpp.h  stm32f7xx_it.h
firmware/proyecto_unificado/Src/: main.c  maincpp.cpp  stm32f7xx_hal_msp.c  stm32f7xx_hal_timebase_tim.c  stm32f7xx_it.c
firmware/proyecto_unificado/ros_lib/: STM32Hardware.h  time.cpp
firmware/prueba/: .cproject  .mxproject  STM32CubeProgrammer.launch  prueba.elf.launch  prueba.ioc  tags
firmware/prueba/Inc/: main.h
firmware/prueba/Src/: main.c  mainpp.cpp  stm32f7xx_hal_msp.c
firmware/prueba/ros_lib/: STM32Hardware.h  STM32TcpHardware.h  ros.h
firmware/prueba_con_mpu6050/: .cproject  .mxproject  .project  prueba_con_mpu6050.ioc  tags
firmware/prueba_con_mpu6050/I2Cdev/: I2Cdev.cpp  I2Cdev.h
firmware/prueba_con_mpu6050/Inc/: stm32f7xx_hal_conf.h
firmware/prueba_con_mpu6050/MPU6050/: MPU6050.cpp  MPU6050.h
firmware/prueba_con_mpu6050/Src/: main.c  mainpp.cpp  stm32f7xx_hal_msp.c
firmware/prueba_con_mpu6050/ros_lib/: STM32Hardware.h
firmware/prueba_create_uart/: .cproject  .mxproject  .project  prueba_create_uart.elf DOWNLOAD and RUN.launch  prueba_create_uart.elf.launch  prueba_create_uart.ioc
firmware/prueba_create_uart/Inc/: main.h
firmware/prueba_create_uart/Src/: main.c  maincpp.cpp  stm32f7xx_hal_msp.c
firmware/prueba_ethernet/: .cproject  .mxproject  .project  prueba_ethernet.elf.launch  prueba_ethernet.ioc
firmware/prueba_ethernet/Inc/: main.h  stm32f7xx_hal_conf.h  stm32f7xx_it.h
firmware/prueba_ethernet/Src/: ethernetif.c  lwip.c  main.c  stm32f7xx_it.c  (+1 more)
firmware/prueba_odometry/: .cproject  .mxproject  .project  prueba.elf.launch  prueba.ioc
firmware/prueba_rosserial_ethernet/: .cproject  .mxproject  prueba.ioc
firmware/prueba_tinyIMU/: .cproject  .mxproject  prueba.elf.launch  prueba.ioc
launch/: create_2.launch  gmapping.launch  imu.launch  joy_teleop.launch  kinect.launch  lidar.launch  lubobot_visualization.launch  robot_mapping.launch  robot_pose_ekf.launch  robot_teleop.launch
lubobot/: CMakeLists.txt  lubobot.urdf  mapa_feo.yaml  mapa_mejorado.yaml  package.xml
lubobot/config/: ekf.yaml
lubobot/config/amcl/: navfn_global_planner_params.yaml
lubobot/config/ekf/: ekf_imu.yaml  ekf_odom.yaml
lubobot/include/: lubo_imu_relay.h  util.h
lubobot/launch/: amcl_demo.launch  bringup_posta.launch  create_2.launch  diff_tf.launch  ekf.launch  gmapping.launch  imu.launch  kinect.launch  lubobot_visualization.launch  move_base.launch  robot_bringup.launch  static_map.launch  todito.launch
lubobot/maps/: mapa_mejorado.yaml  mapita.yaml
lubobot/meshes/: pole_100mm.stl  pole_80mm.stl  top_plate_290mm.stl
lubobot/rviz/: lubo.rviz  lubobot.rviz
lubobot/scripts/: diff_tf  move_robot_test
lubobot/src/: diff_tf.cpp  diff_tf.h  lubo_imu_relay.cpp  lubo_imu_relay_node.cpp  lubo_odom_node.cpp  odom_node.cpp  prueba.cpp
lubobot/urdf/: body.urdf.xacro  create_2.urdf.xacro  create_base.urdf.xacro  imu.urdf.xacro  kinect.urdf.xacro  lds_lidar.urdf.xacro  lubobot.urdf.xacro
lubobot_msgs/: CMakeLists.txt  README.md  package.xml
lubobot_msgs/msg/: LuboIMU.msg  luboEncoders.msg
maps/: mapita.yaml
meshes/: bottom_plate_290mm.stl  top_plate_290mm.stl
rqt/: angular_vel.perspective  linear_acc.perspective
rviz/: imu.rviz  lubo.rviz  navigation.rviz
scripts/: make_urdf
urdf/: assembly_mount.urdf.xacro  imu.urdf.xacro  lds_lidar.urdf.xacro  lubobot.urdf.xacro
(+51 files in other folders)
