<?xml version="1.0"?>
<package format="2">
  <name>lubobot</name>

  <version>0.0.0</version>

  <description>The lubobot package</description>

  <maintainer email="apojomovsky@gmail.com">Alexis Pojomovsky</maintainer>

  <license>MIT</license>

  <build_depend>lubobot_msgs</build_depend>

  <exec_depend>imu_tools</exec_depend>
  <exec_depend>joy_teleop</exec_depend>
  <exec_depend>robot_localization</exec_depend>

  <buildtool_depend>catkin</buildtool_depend>
</package>
