<?xml version="1.0"?>
<package format="2">
  <name>lubobot</name>

  <version>0.0.0</version>

  <description>The lubobot package</description>

  <maintainer email="apojomovsky@gmail.com">Alexis Pojomovsky</maintainer>

  <license>MIT</license>

  <build_depend>message_generation</build_depend>

  <exec_depend>freenect_launch</exec_depend>
  <exec_depend>freenect_stack</exec_depend>
  <exec_depend>depthimage_to_laserscan</exec_depend>
  <exec_depend>imu_tools</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <buildtool_depend>catkin</buildtool_depend>

  <export>

  </export>
</package>
