<?xml version="1.0"?>
<package format="2">
  <name>lubobot_msgs</name>
  <version>0.0.0</version>
  <description>Lubobot messages</description>

  <!-- author and maintainer information -->
  <maintainer email="apojomovsky@gmail.com">Alexis Pojomovsky</maintainer>
  <author email="apojomovsky@gmail.com">Alexis Pojomovsky</author> -->

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>

  </export>
</package>
